# bigdata-demos

./: .gitignore  README.md  pom.xml
build-tools/: T3CheckStyle.xml  ali-pmd.xml
c-demo/: CMakeLists.txt
c-demo/chapter01/: 01_Hello.c  02_CommentDest.c  03_HelloC.c  04_Print.c
flink-demo/: pom.xml
flume-demo/: pom.xml
flume-demo/docs/simplecase/: flume-2-tailDir-memory-hdfs.conf
hbase-demo/: pom.xml
hbase-demo/hbase-test/: pom.xml
hbase-demo/phoenix-demo/: pom.xml
hbase-demo/phoenix-thin-demo/: pom.xml
hdfs-demo/: pom.xml
hive-demo/: pom.xml
hive-demo/docs/datas/: personInfo.txt
hive-demo/docs/sql/: personInfo.sql
kafka-demo/: pom.xml
kerberos-demo/: pom.xml
kingbase-demo/: pom.xml
mapreduce-demo/: pom.xml
mapreduce-demo/input/: test.txt
metadata-demo/: pom.xml
notice-demo/: pom.xml
scala-demo/datas/: allprovince.txt  product.txt
scala-demo/src/: HelloScala.scala  Person.scala  Test01_Var.scala  Test02_Str.scala  Test03_Type.scala  Test04_TypeCast.scala  Test05_Operation.scala  Test06_If_else.scala  Test07_Loop.scala  Test08_Lambda.scala  Test09_MethodParams.scala  Test10_FunctionDefined.scala  Test11_HighFunction.scala  Test12_HighFunctionPractice.scala  Test12_HighFunctionSimplify.scala  Test13_Currie.scala  Test14_ClosePackage.scala  Test15_Recursive.scala
scala-demo/src/chapter10/: Test01_Implicit.scala
scala-demo/src/chapter6/: Test01_Class.scala  Test02_Object.scala  Test03_Companion.scala  Test04_TypeCheck.scala
spark-demo/: pom.xml
spark-demo/datas/: score.txt  type.txt  wc.txt
spark-demo/datas/json/: test.json
(+192 files in other folders)
